--- a/.github/workflows/relese.yaml
+++ b/.github/workflows/relese.yaml
@@ -13,9 +13,9 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os_name: FreeBSD-x86_64
-            os: ubuntu-20.04
-            target: x86_64-unknown-freebsd
+          # - os_name: FreeBSD-x86_64
+          #   os: ubuntu-20.04
+          #   target: x86_64-unknown-freebsd
           - os_name: Linux-x86_64
             os: ubuntu-20.04
             target: x86_64-unknown-linux-musl
@@ -48,7 +48,7 @@ jobs:
       - name: Cache cargo & target directories
         uses: Swatinem/rust-cache@v2
       - name: Install musl-tools on Linux
-        run: sudo apt-get update --yes && sudo apt-get install --yes musl-tools
+        run: sudo apt-get update --yes && sudo apt-get install --yes musl-tools libxdo-dev
         if: contains(matrix.name, 'musl')
       - name: Build binary
         uses: houseabsolute/actions-rust-cross@v0
