--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.89"
-enigo = "0.2.1"
 figment = { version = "0.10.19", features = ["toml"] }
 rdev = "0.5.3"
 redis = "0.27.3"
@@ -14,3 +13,9 @@ serde_json = "1.0.128"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 xid = "1.1.1"
+
+[target.'cfg(linux)'.dependencies]
+enigo = { version = "0.2.1", features = ["x11rb"] }
+
+[target.'cfg(not(linux))'.dependencies]
+enigo = "0.2.1"
