--- a/.github/workflows/relese.yaml
+++ b/.github/workflows/relese.yaml
@@ -58,6 +58,8 @@ jobs:
         if: contains(matrix.name, 'musl')
       - name: Build binary
         uses: houseabsolute/actions-rust-cross@v0
+        env:
+          PKG_CONFIG_ALLOW_CROSS: "1"
         with:
           command: "build"
           target: ${{ matrix.target }}
