workflow: add xi.pc to  PKG_CONFIG_PATH

--- a/.github/workflows/relese.yaml
+++ b/.github/workflows/relese.yaml
@@ -47,15 +47,29 @@ jobs:
       - uses: actions/checkout@v4
       - name: Cache cargo & target directories
         uses: Swatinem/rust-cache@v2
-      - name: Install musl-tools on Linux
+      - name: Install X11 dependencies on Ubuntu
         run: |
           sudo apt-get update --yes
           sudo apt-get upgrade --yes
-          sudo apt-get install --yes libxdo-dev libxkbcommon-dev libxi-dev libxtst-dev
-        if: contains(matrix.name, 'linux')
+          sudo apt-get install --yes libxdo-dev libxkbcommon-dev libxi-dev libxtst-dev libxext-dev xdotool
+        if: contains(matrix.os, 'ubuntu')
       - name: Install musl-tools on Linux
         run: sudo apt-get install --yes musl-tools
-        if: contains(matrix.name, 'musl')
+        if: contains(matrix.target, 'musl')
+      # - name: Get xi.pc path and append to PKG_CONFIG_PATH
+      #   run: |
+      #     XIPATH="$(find /usr/lib -name 'xi.pc')"
+      #     if [ -z "$XIPATH" ]; then
+      #       echo "error: could not find xi.pc on the system"
+      #       exit 1
+      #     fi
+      #     if [ -z "$PKG_CONFIG_PATH" ]; then
+      #       echo "PKG_CONFIG_PATH=$XIPATH" >> $GITHUB_ENV
+      #     else
+      #       echo "PKG_CONFIG_PATH=$XIPATH:$PKG_CONFIG_PATH" >> $GITHUB_ENV
+      #     fi
+      #     cat "$GITHUB_ENV"
+      #   if: contains(matrix.os, 'ubuntu')
       - name: Build binary
         uses: houseabsolute/actions-rust-cross@v0
         env:
