--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.89"
 figment = { version = "0.10.19", features = ["toml"] }
-rdev = "0.5.3"
+rdev = { version = "0.5.3", features = ["serde", "serialize"] }
 redis = "0.27.3"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
